--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -19,6 +19,15 @@
     <string name="data_x">Program studi:\n %1$s</string>
     <string name="reward_x">Reward: %1$s</string>
 
+    <string name="jadwal">Jadwal</string>
+
+    <string name="message">%1$s diklik!</string>
+    <string name="koneksi_error">Koneksi error</string>
+    <string name="channel_name">Updater</string>
+    <string name="channel_desc">Update data kursus otomatis</string>
+    <string name="notif_title">Kita ada kelas kursus jurusan kuliah baru nih!</string>
+    <string name="notif_text">Buruan cek biar kamu nggak penasaran..</string>
+
     <string name="belum_ada_data">Belum ada data</string>
     <string name="histori">Histori</string>
     <string name="hapus_histori">Hapus Histori</string>
