--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,15 @@
     <string name="tentang_aplikasi">Tentang Aplikasi</string>
     <string name="copyright">Sebuah platform yang membantu educator untuk memperoleh penghasilan dengan mengajar dan membagikan konten pembelajaran</string>
 
+    <string name="jadwal">Jadwal</string>
+
+    <string name="message">%1$s diklik!</string>
+    <string name="koneksi_error">Koneksi error</string>
+    <string name="channel_name">Updater</string>
+    <string name="channel_desc">Update data kursus otomatis</string>
+    <string name="notif_title">Kita ada kelas kursus jurusan kuliah baru nih!</string>
+    <string name="notif_text">Buruan cek biar kamu nggak penasaran..</string>
+
     <string name="hasil_x">Total bayar: %1$.2f</string>
     <string name="data_x">Program studi:\n %1$s</string>
     <string name="reward_x">Reward: %1$s</string>
